# cs-data-viz

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  config.yml
docker/: compose.yml
docker/database/: Dockerfile  init.sql
docker/env.d/: kaggle.env  metabase.env  postgres.env
scripts/: main.py
scripts/etl/: constants.py  extract.py  load.py  transform.py  transform.sh
