[tool.poetry]
name = "cs-data-viz"
version = "0.1.0"
description = "Activity for my data visualization class."
authors = ["Leonardo Melo <lcbm@cesar.school>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/lcbm/cs-data-viz"
keywords = ["metabase", "docker", "poetry"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pandas = "^1.1.4"
numpy = "^1.19.4"
kaggle = "^1.5.9"
python-dotenv = "^0.15.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["airflow"]
filter_files = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
